Bug 455603 - latte does not identify properly indicators providing only json metadata file
Summary: latte does not identify properly indicators providing only json metadata file
Status: RESOLVED FIXED
Alias: None
Product: lattedock
Classification: Unmaintained
Component: plasmoid (other bugs)
Version First Reported In: git (master)
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Michail Vourlakos
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-06-19 11:16 UTC by stefanfunk1998
Modified: 2022-06-19 15:50 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description stefanfunk1998 2022-06-19 11:16:15 UTC
SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***


STEPS TO REPRODUCE
1. Use Arch Linux
2. install latte-dock-git from the AUR with yay
3. start latte-dock

OBSERVED RESULT
All Icons in the task area are smushed together, there are no indicator points displayed, settings area for indicators is empty

EXPECTED RESULT
indicators show properly, and i can configure them with margins for example

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: current Arch Linux
(available in About System)
KDE Plasma Version: 5.25.0
KDE Frameworks Version: 5.95.0
Qt Version: 5.15.3

ADDITIONAL INFORMATION
bug report created from this post -> https://www.reddit.com/r/kde/comments/vfpuox/latte_v010x_has_many_broken_parts_with_plasma_525/icxiipj/?context=3
a pastebin of the output of latte-dock -d is here -> https://pastebin.com/YqfKmhA0
Comment 1 Michail Vourlakos 2022-06-19 14:53:12 UTC
the indicators installation is probably broken... no idea why... you could try to install latte git version manually in order to confirm that the package is not properly made.
Comment 2 Michail Vourlakos 2022-06-19 14:57:56 UTC
no it isnt... indicators are not installed properly... hm.....
Comment 3 stefanfunk1998 2022-06-19 15:01:56 UTC
(In reply to Michail Vourlakos from comment #1)
> the indicators installation is probably broken... no idea why... you could
> try to install latte git version manually in order to confirm that the
> package is not properly made.

i tried to manually clone the repo and run the accompanied install.sh file to install (took a while because that script only utilizes one core it seems), and can confirm that the behaviour did not change
Comment 4 Michail Vourlakos 2022-06-19 15:36:19 UTC
Git commit ec51d21eae94f22e810653169894ef499c381850 by Michail Vourlakos.
Committed on 19/06/2022 at 15:35.
Pushed by mvourlakos into branch 'master'.

support json files from indicators

--when an indicator provides only a json file for
its metadata latte now is able to indentify it
properly.

M  +23   -6    app/indicator/factory.cpp
M  +2    -0    app/indicator/factory.h
M  +5    -9    app/view/indicator/indicator.cpp
M  +4    -3    app/view/settings/indicatoruimanager.cpp

https://invent.kde.org/plasma/latte-dock/commit/ec51d21eae94f22e810653169894ef499c381850
Comment 5 Michail Vourlakos 2022-06-19 15:38:57 UTC
(In reply to stefanfunk1998 from comment #3)
> i tried to manually clone the repo and run the accompanied install.sh file
> to install (took a while because that script only utilizes one core it
> seems), and can confirm that the behaviour did not change

you are right... thanks a lot for your patience, I have just provided a fix... if you try again with latest git version you will probably not happen the issue any more.
Comment 6 Dmitrii Chermnykh 2022-06-19 15:50:35 UTC
(In reply to Michail Vourlakos from comment #5)
> (In reply to stefanfunk1998 from comment #3)
> > i tried to manually clone the repo and run the accompanied install.sh file
> > to install (took a while because that script only utilizes one core it
> > seems), and can confirm that the behaviour did not change
> 
> you are right... thanks a lot for your patience, I have just provided a
> fix... if you try again with latest git version you will probably not happen
> the issue any more.

Can confirm that it is now working. Thank you for the quick fix