support json files from indicators

--when an indicator provides only a json file for
its metadata latte now is able to indentify it
properly.

BUG:455603